--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^6.0.2",
     "zod": "^4.3.5"
@@ -49,6 +50,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "typescript": "^5.7.2",
