--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "JDL",
+  "name": "Juan F. De Luca - Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
