--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.544.0",
     "nitro": "npm:nitro-nightly@latest",
     "react": "^19.2.0",
